1. 게시글 생성, 리스트, 상세보기 구현 2. article을 post로 변경 3. 초기 게시글 데이터 만들기